--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
   "python.pythonPath": "venv\\Scripts\\python.exe",
   "[python]": {
-    "editor.semanticHighlighting.enabled": false
+    "editor.semanticHighlighting.enabled": false,
+    "editor.defaultFormatter": "ms-python.black-formatter"
   },
   "code-runner.executorMap": {
     "javascript": "node",
@@ -17,5 +18,6 @@
   "[rust]": {
     "editor.defaultFormatter": "rust-lang.rust-analyzer", // Makes the magic
     "editor.formatOnSave": true // Optional
-  }
+  },
+  "python.formatting.provider": "none"
 }
